--- a/.aigne/web-smith/config.yaml
+++ b/.aigne/web-smith/config.yaml
@@ -60,7 +60,7 @@ locale: en
 pagesDir: .aigne/web-smith/pages  # Directory to save generated pages
 sourcesPath:  # Source code paths to analyze
   - ./README.md
-  # - ./assets/screenshots
+  - ./assets/screenshots
   - ./assets/terminal-playback
   - ./aigne.yaml
   - ./docs/overview.md
@@ -70,7 +70,7 @@ defaultDatasources:  # Default datasources included in every page
 # minImageWidth: Only images wider than this value (in pixels) will be used in page generation
 media:
   minImageWidth: 800
-lastGitHead: 4bafdc154a8f9ef2a12da5935a3e235ae8c99618
+lastGitHead: 628ccd0d0a143f2bcf5fa65c26be784f8aac90e5
 appUrl: https://bbqarhrnzt22nikvkeumdrh4ifnrikk25cfp7xcv4oa.did.abtnet.io
 # Checkout ID for website deployment service
 checkoutId: ""
