--- a/.aigne/web-smith/pages/workspace/en/usage.yaml
+++ b/.aigne/web-smith/pages/workspace/en/usage.yaml
@@ -1,92 +1,92 @@
 meta:
-  title: "DocSmith CLI Usage Guide | Master All Commands"
-  description: "Your ultimate guide to mastering AIGNE DocSmith's CLI. Explore detailed walkthroughs for generate, update, translate, publish, and other powerful commands to fully automate your documentation workflow."
+  title: "Usage Guide & Commands | AIGNE DocSmith"
+  description: "Master AIGNE DocSmith with this complete guide to CLI commands. Learn how to generate, update, translate, and publish your AI-powered documentation in seconds."
   image: "mediakit://usage-guide-hero.png"
 sections:
-  - sectionName: "splitHeroWithImageRight"
-    sectionSummary: "A vibrant hero section to introduce the Usage Guide, setting an energetic tone and providing a clear, benefit-oriented overview of the CLI commands."
-    splitHeroTitle: "Master the Command Line, Master Your Docs"
-    splitHeroDescription: "You're in the driver's seat! This guide is your ultimate co-pilot for every core DocSmith command. Let's turn your codebase into brilliant, ready-to-ship documentation, one command at a time."
+  - sectionName: "UsageGuideHero"
+    sectionSummary: "A vibrant hero section that immediately communicates the page's purpose as a command reference, inviting users to master their documentation workflow with key actions."
+    splitHeroTitle: "Master Your Documentation Workflow"
+    splitHeroDescription: "Dive into the core commands that make DocSmith tick. From generating fresh docs to publishing updates, this is your command center for seamless, AI-powered documentation."
     splitHeroActions:
-      - text: "Get Started First"
+      - text: "Get Started Now"
         link: "link:///getting-started"
-      - text: ""
-        link: ""
+      - text: "Explore Features"
+        link: "link:///features"
     splitHeroRightImage: "mediakit://usage-guide-hero.png"
-  - sectionName: "coreCommands"
-    sectionSummary: "A detailed, alternating layout showcasing the main DocSmith CLI commands. Each command is presented with a real terminal playback, making it easy for users to see exactly how it works and what to expect."
+  - sectionName: "CoreCommandsInAction"
+    sectionSummary: "An interactive and dynamic showcase of the main DocSmith commands. Using alternating terminal players, this section demonstrates the real-world application of generate, update, translate, and publish, making it easy for users to see the commands in action."
     oneColumnGridTitle: "Core Commands in Action"
     list:
-      - sectionName: "terminalPlayerRight"
-        sectionSummary: "Demonstrates the 'generate' command, showing users how to create a full documentation set from scratch with a single, powerful instruction."
+      - sectionName: "GenerateCommand"
+        sectionSummary: "Demonstrates the 'aigne doc generate' command, showing users how to kickstart their documentation with a single, powerful action."
         terminalRight:
           title: "aigne doc generate"
-          description: "Kick things off with a bang! This is your go-to command to scan your entire project and generate a complete, beautifully structured documentation set from scratch. It's the magic wand for your first run."
-          actionTitle: "Learn More"
-          actionLink: "link:///getting-started"
+          description: "Kickstart your entire documentation with a single command. DocSmith analyzes your project and generates a complete, structured set of docs from scratch. It's the perfect first step!"
+          actionTitle: ""
+          actionLink: ""
         terminalPlaybackData: "mediakit://generate.json"
-      - sectionName: "terminalPlayerLeft"
-        sectionSummary: "Illustrates the 'update' command, highlighting its intelligence in modifying existing documents based on code changes or user feedback."
+      - sectionName: "UpdateCommand"
+        sectionSummary: "Illustrates the 'aigne doc update' command, highlighting how to keep documentation synchronized with code changes effortlessly."
         terminalLeft:
           title: "aigne doc update"
-          description: "Did you refactor a feature or add a new function? No sweat! Run this command to intelligently refresh your existing docs. It pinpoints what's changed and updates only what's needed, saving you tons of time."
+          description: "Keep your docs perfectly in sync with your code. Select specific files to regenerate or let DocSmith intelligently update only what's changed. You can even provide feedback to guide the AI."
           actionTitle: ""
           actionLink: ""
         terminalPlaybackData: "mediakit://update.json"
-      - sectionName: "terminalPlayerRight"
-        sectionSummary: "Showcases the 'translate' command, emphasizing the ease of reaching a global audience by translating documents into multiple languages."
+      - sectionName: "TranslateCommand"
+        sectionSummary: "Showcases the 'aigne doc translate' command, emphasizing the ease of reaching a global audience by translating docs into multiple languages."
         terminalRight:
           title: "aigne doc translate"
-          description: "Go global in seconds! Pick a document, choose from 12 languages, and let DocSmith handle the rest. You'll get context-aware, technically accurate translations ready for your international users."
+          description: "Go global in seconds! Translate your documentation into 12 different languages with professional, context-aware accuracy. Reach a worldwide audience without breaking a sweat."
           actionTitle: ""
           actionLink: ""
         terminalPlaybackData: "mediakit://translate.json"
-      - sectionName: "terminalPlayerLeft"
-        sectionSummary: "Explains the 'publish' command, providing a clear visual on how to deploy the generated documentation to a live URL effortlessly."
+      - sectionName: "PublishCommand"
+        sectionSummary: "Highlights the 'aigne doc publish' command, demonstrating the final step of making the AI-generated documentation live for the world to see."
         terminalLeft:
           title: "aigne doc publish"
-          description: "Ready to go live? This command beams your documentation straight to the cloud or your own server. Share your beautiful, up-to-date docs with your team and users with a single, satisfying command."
+          description: "Ready to go live? Publish your beautiful, AI-generated docs to the world with one command. Deploy to DocSmith Cloud for free hosting or to your own custom instance."
           actionTitle: ""
           actionLink: ""
         terminalPlaybackData: "mediakit://publish.json"
-  - sectionName: "configurationCommands"
-    sectionSummary: "Presents essential configuration commands side-by-side. This section helps users manage their settings and initialize projects, providing the foundational knowledge for a smooth workflow."
-    twoColumnGridTitle: "Configuration & Management"
+  - sectionName: "ConfigurationCommands"
+    sectionSummary: "A focused section on configuration management, explaining the 'init' and 'prefs' commands to help users customize and verify their DocSmith setup."
+    twoColumnGridTitle: "Fine-Tune Your Setup"
     list:
-      - sectionName: "contentCardWithCodeBottom"
-        sectionSummary: "Explains the 'init' command, which guides new users through an interactive setup process for their project's documentation."
-        contentCardTitle: "Initialize Your Project"
-        contentCardDescription: "First time on a new project? Run `aigne doc init` to launch an interactive setup wizard. It's the quickest way to get everything configured perfectly."
+      - sectionName: "InitCommandCard"
+        sectionSummary: "Explains the 'aigne doc init' command for easy, interactive project setup and reconfiguration."
+        contentCardTitle: "Interactive Setup (`init`)"
+        contentCardDescription: "Run the interactive setup wizard anytime to configure or reconfigure your project. It’s the easiest way to dial in your preferences for documentation styles, target audiences, and languages."
         contentCardBottomCode:
           name: "bash"
           content: "aigne doc init"
-      - sectionName: "contentCardWithCodeBottom"
-        sectionSummary: "Details the 'prefs' command, allowing users to quickly view their current configuration and settings for DocSmith."
-        contentCardTitle: "Check Your Settings"
-        contentCardDescription: "Want to see your current setup? Use `aigne doc prefs` to display all your saved configurations, from languages to documentation styles."
+      - sectionName: "PrefsCommandCard"
+        sectionSummary: "Details the 'aigne doc prefs' command, allowing users to quickly view their current project configuration."
+        contentCardTitle: "View Configuration (`prefs`)"
+        contentCardDescription: "Need to check your current settings? This command displays the complete configuration for your project, so you always know exactly how DocSmith is set up to work its magic."
         contentCardBottomCode:
           name: "bash"
           content: "aigne doc prefs"
-  - sectionName: "faq"
-    sectionSummary: "An FAQ section to proactively answer common user questions about the CLI, covering topics like customization, API keys, and advanced usage to build user confidence and reduce support queries."
-    faqTitle: "Frequently Asked Questions"
+  - sectionName: "AdvancedUsageFAQ"
+    sectionSummary: "An FAQ section designed to empower advanced users by answering common questions about flags and parameters for commands like force regeneration, providing AI feedback, and custom publishing."
+    faqTitle: "Power-User Tips & Tricks"
     faqList:
-      - question: "How can I customize the documentation style or target audience?"
-        answer: "You can customize styles (Technical, User-Friendly), target audiences (Developers, End Users), and more during the `aigne doc init` process or by editing the configuration file directly."
-      - question: "Can I force a complete regeneration of all documents?"
-        answer: "Absolutely! Just use the `--forceRegenerate` flag with the generate command, like this: `aigne doc generate --forceRegenerate`. This is perfect for when you want a completely fresh start."
-      - question: "How do I provide feedback to improve a specific document?"
-        answer: "It's easy! Use the `--feedback` flag with the `generate` or `update` commands. For example: `aigne doc update --docs overview.md --feedback \"Add a section on advanced usage\"`."
-      - question: "Can I use my own API keys for services like OpenAI or Claude?"
-        answer: "Yes, you can! While DocSmith uses the AIGNE Hub by default (no keys needed), you can easily configure your own API keys for direct access to providers like OpenAI, Anthropic, and Google."
-      - question: "What if I only want to translate specific documents?"
-        answer: "No problem! The `translate` command lets you target specific files. Just use the `--docs` flag, like this: `aigne doc translate --langs ja --docs examples.md`."
-  - sectionName: "cta"
-    sectionSummary: "A final, action-oriented CTA section that encourages users to apply what they've learned. It provides clear next steps, guiding them to either start a new project or explore more advanced features."
-    ctaTitle: "Ready to Automate Your Docs?"
-    ctaDescription: "You've seen the commands, now it's time to put them to work! Install the CLI and start generating incredible documentation in minutes."
+      - question: "How do I force a complete regeneration of all documents?"
+        answer: "Easy! Just use the `--forceRegenerate` flag with the generate command: `aigne doc generate --forceRegenerate`. This tells DocSmith to ignore the cache and rebuild everything from the ground up."
+      - question: "Can I provide feedback to the AI during generation?"
+        answer: "Absolutely! The `--feedback` flag is your best friend. For example: `aigne doc generate --feedback \"Add more API examples\"`. The AI will use your input to refine the content."
+      - question: "How do I translate only specific documents?"
+        answer: "You can target specific files using the `--docs` flag. Combine it with `--langs` to get exactly what you need: `aigne doc translate --langs ja --docs overview.md`."
+      - question: "What if I want to publish to my own server?"
+        answer: "No problem! Use the `--appUrl` flag to point to your custom Discuss Kit instance: `aigne doc publish --appUrl https://your-docs.com`."
+      - question: "How can I ensure consistent terminology in translations?"
+        answer: "Use a custom glossary! The `--glossary` flag lets you provide a markdown file with key terms to ensure they are translated consistently across all languages: `aigne doc translate --glossary @path/to/glossary.md`."
+  - sectionName: "FinalCTA"
+    sectionSummary: "A compelling call-to-action that encourages users to move from learning to doing by installing the AIGNE CLI and joining the community, reinforcing the page's action-oriented theme."
+    ctaTitle: "Ready to Supercharge Your Workflow?"
+    ctaDescription: "You've seen the commands, now put them to work. Install the AIGNE CLI and transform your code into stunning documentation today."
     cta:
-      - text: "Get Started Now"
+      - text: "Install AIGNE CLI"
         link: "link:///getting-started"
-      - text: "Explore All Features"
-        link: "link:///features"
+      - text: "Join the Community"
+        link: "link:///community"
